orquestador/pre/service-pre.yml
apiVersion: v1
kind: Service
metadata:
  name: apache
  namespace: portales
  labels:
spec:
  selector:
    app: apache
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
